Bugfixes: null pointer exception when "undefined" selected tool panel overflow Transparent background of dropdown list when collapsing

--- a/src/components/DropdownList.css
+++ b/src/components/DropdownList.css
@@ -52,7 +52,7 @@
 
 .entryInactive {
   color: #696966;
-
+  background-color: #e0e0dc;
   cursor: pointer;
 }
 
